crates/aura-core/tests/boundaries/owner_token_private_constructor.stderr
error[E0451]: fields `token_id` and `scope` of struct `OwnerToken` are private
 --> tests/boundaries/owner_token_private_constructor.rs:5:9
  |
4 |     let _token = OwnerToken {
  |                  ---------- in this type
5 |         token_id: "token-1",
  |         ^^^^^^^^ private field
6 |         scope: "session",
  |         ^^^^^ private field
