crates/aura-core/tests/boundaries/owner_token_private_constructor.rs
use aura_core::ownership::OwnerToken;

fn main() {
    let _token = OwnerToken {
        token_id: "token-1",
        scope: "session",
    };
}
